Add admin panel, database integration, and improve product pages
- Add admin panel with CRUD operations for products, categories, brands, and news
- Integrate MySQL database with Prisma ORM
- Add authentication with NextAuth.js
- Implement image upload functionality
- Update product pages to fetch data from database
- Add category sidebar with hierarchical display
- Improve product detail page design
- Add PDF export functionality for products
- Fix database schema to use TEXT for description fields
- Update frontend to use backend data for categories and products

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/lib/generated/prisma
+
+# uploaded files
+/public/uploads/**/*
+!/public/uploads/**/.gitkeep
