--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "my-v0-project",
+  "name": "zdn-smart-energy",
   "version": "0.1.0",
   "private": true,
+  "description": "ZDN Smart Energy - Product catalog and CMS",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "test:db": "node scripts/test-db-connection.js",
+    "kill:connections": "node scripts/kill-old-connections.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -42,7 +45,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@vercel/analytics": "latest",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -51,7 +54,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
-    "geist": "latest",
+    "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
