--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
     "geist": "^1.3.1",
+    "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
