--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next": "^15.5.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "prisma": "^6.18.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
